--- a/index.html
+++ b/index.html
@@ -2,6 +2,6 @@
 <html>
     <body>
         <h1>bro what are you doing here</h1>
-        <p>yeah so what i'm starting my portfolio a little less than a month after i graduated with a masters :(</p>
+        <p>yeah so what i'm starting my portfolio a little late</p>
     </body>
 </html>
